--- a/Assignment2_AD2022.ipynb
+++ b/Assignment2_AD2022.ipynb
@@ -7558,7 +7558,7 @@
       "source": [
         "**RESULTS OF TEST:**\n",
         "\n",
-        "The scores do refelct some bias twoards minorities. Even when the context of the comment seems to not carry any toxic traits it will more likely score higher than comments including more generic topics. Derogatory language and grammar also play a role in how the API scores comments. The model doesn't discriminate against the bias of human raters and does not consider the words within the text like other machine learning models. The bias comes from the human raters interpretation of the comments."
+        "The scores do refelct some bias twoards minorities. Even when the context of the comment seems to not carry any toxic traits it will more likely score higher than comments including more generic topics. Derogatory language and grammar also play a role in how the API scores comments. The model doesn't discriminate against the bias of human raters. The bias comes from the human raters interpretation of the comments and the way the API scores words in scentences when joined together. The creators of the API are designed the API to be sensitive to minorities, but there is a substancial difference in how minorities are scored when included in a comment. Xenophobia was quite common but in some instances the model failed to socre it as toxic becuase certain words related to the minority are not present even if the conext is clearly derogatory."
       ],
       "metadata": {
         "id": "veEjD0bquQvU"
